@@ -8,6 +8,7 @@ New Features:
 * taskbar was changed to propagate Control-Button3 clicks to parent window i.e to panel
 * launchbar was changed to propagate Control-Button3 clicks to parent window
 * pager was changed to propagate Control-Button3 clicks to parent window
+* dclock was changed to propagate Control-Button3 clicks to parent window
 
 4.12
 New Features:
